@@ -2,14 +2,15 @@ package dev.langchain4j.model.anthropic.internal.mapper;
 
 import static dev.langchain4j.internal.Exceptions.illegalArgument;
 import static dev.langchain4j.internal.JsonSchemaElementUtils.toMap;
+import static dev.langchain4j.internal.ToolSpecificationUtils.isEffectivelyStrict;
 import static dev.langchain4j.internal.Utils.isNotNullOrBlank;
 import static dev.langchain4j.internal.Utils.isNotNullOrEmpty;
 import static dev.langchain4j.internal.Utils.isNullOrBlank;
 import static dev.langchain4j.internal.Utils.isNullOrEmpty;
 import static dev.langchain4j.internal.ValidationUtils.ensureNotBlank;
 import static dev.langchain4j.model.anthropic.internal.api.AnthropicRole.ASSISTANT;
+import static dev.langchain4j.model.anthropic.internal.api.AnthropicRole.SYSTEM;
 import static dev.langchain4j.model.anthropic.internal.api.AnthropicRole.USER;
-import static dev.langchain4j.model.anthropic.internal.client.Json.fromJson;
 import static dev.langchain4j.model.anthropic.internal.client.Json.toJson;
 import static dev.langchain4j.model.output.FinishReason.LENGTH;
 import static dev.langchain4j.model.output.FinishReason.OTHER;
@@ -18,7 +19,6 @@ import static dev.langchain4j.model.output.FinishReason.TOOL_EXECUTION;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 
 import dev.langchain4j.Internal;
 import dev.langchain4j.agent.tool.ToolExecutionRequest;
@@ -33,11 +33,15 @@ import dev.langchain4j.data.message.TextContent;
 import dev.langchain4j.data.message.ToolExecutionResultMessage;
 import dev.langchain4j.data.message.UserMessage;
 import dev.langchain4j.data.pdf.PdfFile;
+import dev.langchain4j.model.anthropic.AnthropicCacheDiagnostics;
 import dev.langchain4j.model.anthropic.AnthropicServerTool;
 import dev.langchain4j.model.anthropic.AnthropicServerToolResult;
 import dev.langchain4j.model.anthropic.AnthropicTokenUsage;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicCacheControl;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicCacheMissReason;
 import dev.langchain4j.model.anthropic.internal.api.AnthropicCacheType;
 import dev.langchain4j.model.anthropic.internal.api.AnthropicContent;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicDiagnostics;
 import dev.langchain4j.model.anthropic.internal.api.AnthropicImageContent;
 import dev.langchain4j.model.anthropic.internal.api.AnthropicMessage;
 import dev.langchain4j.model.anthropic.internal.api.AnthropicMessageContent;
@@ -53,6 +57,7 @@ import dev.langchain4j.model.anthropic.internal.api.AnthropicToolSchema;
 import dev.langchain4j.model.anthropic.internal.api.AnthropicToolUseContent;
 import dev.langchain4j.model.anthropic.internal.api.AnthropicUsage;
 import dev.langchain4j.model.chat.request.ToolChoice;
+import dev.langchain4j.model.chat.request.json.JsonAnyOfSchema;
 import dev.langchain4j.model.chat.request.json.JsonArraySchema;
 import dev.langchain4j.model.chat.request.json.JsonObjectSchema;
 import dev.langchain4j.model.chat.request.json.JsonSchemaElement;
@@ -75,30 +80,52 @@ public class AnthropicMapper {
             "redacted_thinking"; // do not change, will break backward compatibility!
     public static final String SERVER_TOOL_RESULTS_KEY =
             "server_tool_results"; // do not change, will break backward compatibility!
+    public static final String CACHE_CONTROL = "cache_control";
+
+    private static boolean isMarkedForCaching(Map<String, Object> attributes) {
+        return attributes != null && "ephemeral".equals(attributes.get(CACHE_CONTROL));
+    }
 
     public static List<AnthropicMessage> toAnthropicMessages(List<ChatMessage> messages) {
-        return toAnthropicMessages(messages, false);
+        return toAnthropicMessages(messages, false, false);
     }
 
     public static List<AnthropicMessage> toAnthropicMessages(List<ChatMessage> messages, boolean sendThinking) {
+        return toAnthropicMessages(messages, sendThinking, false);
+    }
+
+    public static List<AnthropicMessage> toAnthropicMessages(
+            List<ChatMessage> messages, boolean sendThinking, boolean midConversationSystemMessages) {
 
         List<AnthropicMessage> anthropicMessages = new ArrayList<>();
         List<AnthropicMessageContent> toolContents = new ArrayList<>();
+        boolean conversationStarted = false;
 
         for (ChatMessage message : messages) {
 
-            if (message instanceof ToolExecutionResultMessage) {
-                toolContents.add(toAnthropicToolResultContent((ToolExecutionResultMessage) message));
-            } else if (message instanceof SystemMessage) {
-                // ignore, it is handled in the "toAnthropicSystemPrompt" method
+            if (message instanceof ToolExecutionResultMessage toolExecutionResultMessage) {
+                conversationStarted = true;
+                toolContents.add(toAnthropicToolResultContent(toolExecutionResultMessage));
+            } else if (message instanceof SystemMessage systemMessage) {
+                // a leading system message is handled in "toAnthropicSystemPrompt"; a mid-conversation one
+                // is emitted inline as a role:"system" message only when midConversationSystemMessages is enabled
+                if (midConversationSystemMessages && conversationStarted) {
+                    if (!toolContents.isEmpty()) {
+                        anthropicMessages.add(new AnthropicMessage(USER, toolContents));
+                        toolContents = new ArrayList<>();
+                    }
+                    anthropicMessages.add(
+                            new AnthropicMessage(SYSTEM, List.of(new AnthropicTextContent(systemMessage.text()))));
+                }
             } else {
+                conversationStarted = true;
                 if (!toolContents.isEmpty()) {
                     anthropicMessages.add(new AnthropicMessage(USER, toolContents));
                     toolContents = new ArrayList<>();
                 }
 
-                if (message instanceof UserMessage) {
-                    List<AnthropicMessageContent> contents = toAnthropicMessageContents((UserMessage) message);
+                if (message instanceof UserMessage userMessage) {
+                    List<AnthropicMessageContent> contents = toAnthropicMessageContents(userMessage);
                     anthropicMessages.add(new AnthropicMessage(USER, contents));
                 } else if (message instanceof AiMessage aiMessage) {
                     List<AnthropicMessageContent> contents = toAnthropicMessageContents(aiMessage, sendThinking);
@@ -115,34 +142,83 @@ public class AnthropicMapper {
     }
 
     private static AnthropicToolResultContent toAnthropicToolResultContent(ToolExecutionResultMessage message) {
-        return new AnthropicToolResultContent(message.id(), message.text(), null); // TODO propagate isError
+        AnthropicCacheControl cacheControl =
+                isMarkedForCaching(message.attributes()) ? AnthropicCacheType.EPHEMERAL.cacheControl() : null;
+        Boolean isError = Boolean.TRUE.equals(message.isError()) ? true : null;
+
+        if (message.hasSingleText()) {
+            return new AnthropicToolResultContent(message.id(), message.text(), isError, cacheControl);
+        }
+
+        List<AnthropicMessageContent> contentBlocks = new ArrayList<>();
+        for (dev.langchain4j.data.message.Content content : message.contents()) {
+            if (content instanceof TextContent textContent) {
+                contentBlocks.add(new AnthropicTextContent(textContent.text()));
+            } else if (content instanceof ImageContent imageContent) {
+                Image image = imageContent.image();
+                if (image.url() != null) {
+                    contentBlocks.add(AnthropicImageContent.fromUrl(image.url().toString()));
+                } else {
+                    contentBlocks.add(AnthropicImageContent.fromBase64(
+                            ensureNotBlank(image.mimeType(), "mimeType"),
+                            ensureNotBlank(image.base64Data(), "base64Data")));
+                }
+            } else {
+                throw illegalArgument("Unsupported content type in tool result: " + content.type());
+            }
+        }
+        return new AnthropicToolResultContent(message.id(), contentBlocks, isError, cacheControl);
     }
 
     private static List<AnthropicMessageContent> toAnthropicMessageContents(UserMessage message) {
-        return message.contents().stream()
-                .map(content -> {
-                    if (content instanceof TextContent textContent) {
-                        return new AnthropicTextContent(textContent.text());
-                    } else if (content instanceof ImageContent imageContent) {
-                        Image image = imageContent.image();
-                        if (image.url() != null) {
-                            return AnthropicImageContent.fromUrl(image.url().toString());
-                        }
-                        return AnthropicImageContent.fromBase64(
-                                ensureNotBlank(image.mimeType(), "mimeType"),
-                                ensureNotBlank(image.base64Data(), "base64Data"));
-                    } else if (content instanceof PdfFileContent pdfFileContent) {
-                        PdfFile pdfFile = pdfFileContent.pdfFile();
-                        if (pdfFile.url() != null) {
-                            return AnthropicPdfContent.fromUrl(pdfFile.url().toString());
-                        }
-                        return AnthropicPdfContent.fromBase64(
-                                pdfFile.mimeType(), ensureNotBlank(pdfFile.base64Data(), "base64Data"));
-                    } else {
-                        throw illegalArgument("Unknown content type: " + content);
-                    }
-                })
-                .collect(toList());
+        boolean shouldCache = isMarkedForCaching(message.attributes());
+
+        List<dev.langchain4j.data.message.Content> contents = message.contents();
+        List<AnthropicMessageContent> anthropicContents = new ArrayList<>();
+
+        for (int i = 0; i < contents.size(); i++) {
+            dev.langchain4j.data.message.Content content = contents.get(i);
+            // Anthropic Prompt Caching is prefix-based. When a user marks a UserMessage for caching,
+            // we apply the cache_control to the last content item to ensure the cache checkpoint
+            // includes the entire message content up to that point.
+
+            boolean isLastItem = (i == contents.size() - 1);
+            boolean applyCache = shouldCache && isLastItem;
+
+            if (content instanceof TextContent textContent) {
+                if (applyCache) {
+                    anthropicContents.add(
+                            new AnthropicTextContent(textContent.text(), AnthropicCacheType.EPHEMERAL.cacheControl()));
+                } else {
+                    anthropicContents.add(new AnthropicTextContent(textContent.text()));
+                }
+            } else if (content instanceof ImageContent imageContent) {
+                Image image = imageContent.image();
+                AnthropicCacheControl cacheControl = applyCache ? AnthropicCacheType.EPHEMERAL.cacheControl() : null;
+                if (image.url() != null) {
+                    anthropicContents.add(
+                            AnthropicImageContent.fromUrl(image.url().toString(), cacheControl));
+                } else {
+                    anthropicContents.add(AnthropicImageContent.fromBase64(
+                            ensureNotBlank(image.mimeType(), "mimeType"),
+                            ensureNotBlank(image.base64Data(), "base64Data"),
+                            cacheControl));
+                }
+            } else if (content instanceof PdfFileContent pdfFileContent) {
+                PdfFile pdfFile = pdfFileContent.pdfFile();
+                AnthropicCacheControl cacheControl = applyCache ? AnthropicCacheType.EPHEMERAL.cacheControl() : null;
+                if (pdfFile.url() != null) {
+                    anthropicContents.add(
+                            AnthropicPdfContent.fromUrl(pdfFile.url().toString(), cacheControl));
+                } else {
+                    anthropicContents.add(AnthropicPdfContent.fromBase64(
+                            pdfFile.mimeType(), ensureNotBlank(pdfFile.base64Data(), "base64Data"), cacheControl));
+                }
+            } else {
+                throw illegalArgument("Unknown content type: " + content);
+            }
+        }
+        return anthropicContents;
     }
 
     private static List<AnthropicMessageContent> toAnthropicMessageContents(AiMessage message, boolean sendThinking) {
@@ -160,39 +236,66 @@ public class AnthropicMapper {
             }
         }
 
+        boolean shouldCache = isMarkedForCaching(message.attributes());
+        boolean hasToolExecutionRequests = message.hasToolExecutionRequests();
+
         if (isNotNullOrBlank(message.text())) {
-            contents.add(new AnthropicTextContent(message.text()));
+            // the tool_use blocks added below (if any) become the last content block instead of this text
+            boolean applyCache = shouldCache && !hasToolExecutionRequests;
+            contents.add(
+                    applyCache
+                            ? new AnthropicTextContent(message.text(), AnthropicCacheType.EPHEMERAL.cacheControl())
+                            : new AnthropicTextContent(message.text()));
         }
 
-        if (message.hasToolExecutionRequests()) {
-            List<AnthropicToolUseContent> toolUseContents = message.toolExecutionRequests().stream()
-                    .map(toolExecutionRequest -> AnthropicToolUseContent.builder()
-                            .id(toolExecutionRequest.id())
-                            .name(toolExecutionRequest.name())
-                            .input(toAnthropicInput(toolExecutionRequest))
-                            .build())
-                    .toList();
-            contents.addAll(toolUseContents);
+        if (hasToolExecutionRequests) {
+            List<ToolExecutionRequest> toolExecutionRequests = message.toolExecutionRequests();
+            for (int i = 0; i < toolExecutionRequests.size(); i++) {
+                ToolExecutionRequest toolExecutionRequest = toolExecutionRequests.get(i);
+                boolean isLastItem = i == toolExecutionRequests.size() - 1;
+                AnthropicToolUseContent.Builder toolUseContentBuilder = AnthropicToolUseContent.builder()
+                        .id(toolExecutionRequest.id())
+                        .name(toolExecutionRequest.name())
+                        .input(toAnthropicInput(toolExecutionRequest));
+                if (shouldCache && isLastItem) {
+                    toolUseContentBuilder.cacheControl(AnthropicCacheType.EPHEMERAL.cacheControl());
+                }
+                contents.add(toolUseContentBuilder.build());
+            }
         }
 
         return contents;
     }
 
-    private static Map<String, Object> toAnthropicInput(ToolExecutionRequest toolExecutionRequest) {
+    private static String toAnthropicInput(ToolExecutionRequest toolExecutionRequest) {
         String arguments = toolExecutionRequest.arguments();
         if (isNullOrBlank(arguments)) {
-            return Map.of();
+            return "{}";
         }
 
-        return fromJson(arguments, Map.class);
+        return arguments;
     }
 
     public static List<AnthropicTextContent> toAnthropicSystemPrompt(
             List<ChatMessage> messages, AnthropicCacheType cacheType) {
-        List<SystemMessage> systemMessages = messages.stream()
-                .filter(message -> message instanceof SystemMessage)
-                .map(message -> (SystemMessage) message)
-                .collect(toList());
+        return toAnthropicSystemPrompt(messages, cacheType, false);
+    }
+
+    public static List<AnthropicTextContent> toAnthropicSystemPrompt(
+            List<ChatMessage> messages, AnthropicCacheType cacheType, boolean midConversationSystemMessages) {
+        List<SystemMessage> systemMessages = new ArrayList<>();
+        boolean conversationStarted = false;
+        for (ChatMessage message : messages) {
+            if (message instanceof SystemMessage systemMessage) {
+                // when midConversationSystemMessages is enabled, only leading system messages go to the top-level
+                // "system" field; mid-conversation ones are emitted inline by "toAnthropicMessages"
+                if (!midConversationSystemMessages || !conversationStarted) {
+                    systemMessages.add(systemMessage);
+                }
+            } else {
+                conversationStarted = true;
+            }
+        }
 
         SystemMessage lastSystemMessage =
                 systemMessages.isEmpty() ? null : systemMessages.get(systemMessages.size() - 1);
@@ -204,7 +307,7 @@ public class AnthropicMapper {
                     }
                     return new AnthropicTextContent(message.text());
                 })
-                .collect(toList());
+                .toList();
     }
 
     public static AiMessage toAiMessage(List<AnthropicContent> contents) {
@@ -240,9 +343,9 @@ public class AnthropicMapper {
             }
 
             List<String> redactedThinkings = contents.stream()
-                    .filter(content -> "redacted_thinking".equals(content.type))
+                    .filter(content -> REDACTED_THINKING_KEY.equals(content.type))
                     .map(content -> content.data)
-                    .collect(toList());
+                    .toList();
             if (!redactedThinkings.isEmpty()) {
                 attributes.put(REDACTED_THINKING_KEY, redactedThinkings);
             }
@@ -256,7 +359,7 @@ public class AnthropicMapper {
                             .toolUseId(content.toolUseId)
                             .content(content.content)
                             .build())
-                    .collect(toList());
+                    .toList();
             if (!serverToolResults.isEmpty()) {
                 attributes.put(SERVER_TOOL_RESULTS_KEY, serverToolResults);
             }
@@ -269,7 +372,7 @@ public class AnthropicMapper {
                         .name(content.name)
                         .arguments(toJson(content.input))
                         .build())
-                .collect(toList());
+                .toList();
 
         return AiMessage.builder()
                 .text(isNullOrEmpty(text) ? null : text)
@@ -292,6 +395,17 @@ public class AnthropicMapper {
                 .outputTokenCount(anthropicUsage.outputTokens)
                 .cacheCreationInputTokens(anthropicUsage.cacheCreationInputTokens)
                 .cacheReadInputTokens(anthropicUsage.cacheReadInputTokens)
+                .build();
+    }
+
+    public static AnthropicCacheDiagnostics toCacheDiagnostics(AnthropicDiagnostics anthropicDiagnostics) {
+        if (anthropicDiagnostics == null) {
+            return null;
+        }
+        AnthropicCacheMissReason cacheMissReason = anthropicDiagnostics.cacheMissReason;
+        return AnthropicCacheDiagnostics.builder()
+                .cacheMissReasonType(cacheMissReason == null ? null : cacheMissReason.type)
+                .cacheMissedInputTokens(cacheMissReason == null ? null : cacheMissReason.cacheMissedInputTokens)
                 .build();
     }
 
@@ -349,7 +463,7 @@ public class AnthropicMapper {
                     return toAnthropicTool(
                             toolSpecification, AnthropicCacheType.NO_CACHE, toolMetadataKeysToSend, strictTools);
                 })
-                .collect(toList());
+                .toList();
     }
 
     public static AnthropicTool toAnthropicTool(
@@ -364,18 +478,21 @@ public class AnthropicMapper {
             Boolean strictTools) {
         JsonObjectSchema parameters = toolSpecification.parameters();
 
-        // prevent NPE during unboxing
-        boolean strict = Boolean.TRUE.equals(strictTools);
+        boolean strict = isEffectivelyStrict(toolSpecification, Boolean.TRUE.equals(strictTools));
+
+        AnthropicToolSchema.Builder inputSchemaBuilder = AnthropicToolSchema.builder()
+                .properties(parameters != null ? toMap(parameters.properties(), strict) : emptyMap())
+                .required(parameters != null ? parameters.required() : emptyList())
+                .additionalProperties(strict ? Boolean.FALSE : null);
+        if (parameters != null && !parameters.definitions().isEmpty()) {
+            inputSchemaBuilder.defs(mapDefs(parameters.definitions()));
+        }
 
         AnthropicTool.Builder toolBuilder = AnthropicTool.builder()
                 .name(toolSpecification.name())
                 .description(toolSpecification.description())
                 .strict(strict ? Boolean.TRUE : null)
-                .inputSchema(AnthropicToolSchema.builder()
-                        .properties(parameters != null ? toMap(parameters.properties(), strict) : emptyMap())
-                        .required(parameters != null ? parameters.required() : emptyList())
-                        .additionalProperties(strict ? Boolean.FALSE : null)
-                        .build());
+                .inputSchema(inputSchemaBuilder.build());
 
         if (cacheToolsPrompt != AnthropicCacheType.NO_CACHE) {
             toolBuilder.cacheControl(cacheToolsPrompt.cacheControl());
@@ -458,10 +575,24 @@ public class AnthropicMapper {
 
             return map;
         }
+        if (schemaElement instanceof JsonAnyOfSchema anyOfSchema) {
+            Map<String, Object> map = new LinkedHashMap<>();
+
+            if (anyOfSchema.description() != null) {
+                map.put("description", anyOfSchema.description());
+            }
+
+            List<Map<String, Object>> anyOf = anyOfSchema.anyOf().stream()
+                    .map(AnthropicMapper::toAnthropicSchema)
+                    .toList();
+            map.put("anyOf", anyOf);
+
+            return map;
+        }
 
         // Run with strict=false to avoid unsupported features, like union types in enum schemas
         // https://platform.claude.com/docs/en/build-with-claude/structured-outputs#json-schema-limitations
-        return toMap(schemaElement);
+        return toMap(schemaElement, false);
     }
 
     private static Map<String, Map<String, Object>> mapDefs(Map<String, JsonSchemaElement> defs) {
